--- a/include/CalendarSolution/List/DetailTable.css
+++ b/include/CalendarSolution/List/DetailTable.css
@@ -18,6 +18,7 @@ table.cs_list_detailtable td.cs_time {
 /* status: O = Open, F = Full, C = Cancelled */
 table.cs_list_detailtable tr.cs_changed_Y,
 table.cs_list_detailtable tr.cs_status_C {
+ color: black;
  background-color: #FFCC66;
 }
 
